--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
     <hr>
 
     <div class="social-media">
-        <img src="/Assets/IMG/Vector (3).png" alt="" style="width: 17px; height: 30px;">
-        <img src="/Assets/IMG/Vector (2).png" alt="" style="width: 24px; height: 24px;">
-        <img src="/Assets/IMG/twitter-1722376-1466162 1.png" alt="" style="width: 50px; height: 50px;">
+        <img src="/Assets/IMG/Vector (3).png" alt="" style="padding: 9px 14px;">
+        <img src="/Assets/IMG/Vector (2).png" alt="" style="padding: 12.3px 12.3px;">
+        <img src="/Assets/IMG/twitter-1722376-1466162 1.png" alt="">
     </div>
     
     <p>
